--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,13 +1,13 @@
-.language:hover {
-  color: red;
-  cursor: pointer;
-  font-size: 2em;
+.input-group {
+	margin: 20px 0px;
 }
 
-.success {
-  color: green;
+td, th {
+	vertical-align: middle !important;
+	text-align: center !important;
 }
 
-.marginTop {
-  margin-top: 10em;
+td:first-of-type {
+	height: 200px;
+	width: 250px;
 }
